# yodf

./: .gitignore  README.md  pyproject.toml
examples/: Untitled.ipynb  example1_simple_cost_function.ipynb  example2_cost_function_2_variables.ipynb  example3_linear_regression.ipynb  example4_linear_regression_sin_x.ipynb  example4_logistic_regression.ipynb  example5_neural_network.ipynb  example7_neural_network_mnist.ipynb
tests/: test_testcase0.py  test_testcase1.py  test_testcase2.py  test_testcase3.py  test_testcase4.py  test_testcase5.py  test_testcase6.py
yodf/: __init__.py  core.py  operations.py  train.py
