[tool.poetry]
name = "yodf"
version = "1.0.14"
description = "'Hello, World!' Forward Mode Autdiff library with Tensorflow 1 like interface."
authors = ["Yogesh Ketkar <yogimogi@gmail.com>"]
repository = "https://github.com/yogimogi/yodf"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
